--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "publisher": "daaku",
   "engines": {
-    "vscode": "^1.0.0"
+    "vscode": "^1.44.0"
   },
   "categories": [
     "Other"
@@ -48,6 +48,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "tree-kill": "^1.2.2"
+    "tree-kill": "^1.2.2",
+    "vsce": "^1.75.0"
   }
 }
