--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
   "devDependencies": {
     "@types/node": "^13.11.1",
     "@types/vscode": "^1.44.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "vsce": "^1.75.0"
   },
   "dependencies": {
-    "tree-kill": "^1.2.2",
-    "vsce": "^1.75.0"
+    "tree-kill": "^1.2.2"
   }
 }
