--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "execbg",
   "displayName": "ExecBG",
   "description": "Execute commands from VS Code in the background",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "publisher": "daaku",
   "engines": {
     "vscode": "^1.44.0"
@@ -37,19 +37,16 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "webpack --mode production",
-    "dev": "webpack --mode development --watch"
+    "build": "esbuild index.ts --bundle --outfile=dist/index.js --external:vscode --format=cjs --platform=node",
+    "vscode:prepublish": "npm run build -- --minify",
+    "dev": "npm run build -- --sourcemap --watch"
   },
   "devDependencies": {
-    "@types/node": "^16.11.4",
-    "@types/vscode": "^1.61.0",
-    "@types/webpack": "^5.28.0",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
-    "vsce": "^1.100.2",
-    "webpack": "^5.59.1",
-    "webpack-cli": "^4.9.1"
+    "@types/node": "^17.0.9",
+    "@types/vscode": "^1.44.0",
+    "esbuild": "^0.14.11",
+    "typescript": "^4.5.4",
+    "vsce": "^2.6.3"
   },
   "dependencies": {
     "tree-kill": "^1.2.2"
