--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "@types/node": "^17.0.9",
     "@types/vscode": "^1.44.0",
     "esbuild": "^0.14.11",
-    "typescript": "^4.5.4",
-    "vsce": "^2.6.3"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "tree-kill": "^1.2.2"
